--- a/src/main/resources/fxmls/fan/FanMenuUI.fxml
+++ b/src/main/resources/fxmls/fan/FanMenuUI.fxml
@@ -45,7 +45,7 @@
       </Text>
       <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="619.0" prefWidth="1014.0">
          <content>
-            <FlowPane fx:id="flowPane" columnHalignment="CENTER" hgap="20.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="999.0" style="-fx-background-color: #e4e4e4;" vgap="20.0">
+            <FlowPane fx:id="flowPane" columnHalignment="CENTER" hgap="20.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="999.0" style="-fx-background-color: WHITE;" vgap="20.0">
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding></FlowPane>
