--- a/src/main/resources/fxmls/Idol/IdolFanMeetsView.fxml
+++ b/src/main/resources/fxmls/Idol/IdolFanMeetsView.fxml
@@ -40,7 +40,7 @@
             </Button>
             <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="39.0" layoutY="134.0" prefHeight="534.0" prefWidth="938.0">
                <content>
-                  <FlowPane fx:id="flowPane" prefHeight="561.0" prefWidth="942.0" style="-fx-background-color: #e4e4e4;" />
+                  <FlowPane fx:id="flowPane" prefHeight="561.0" prefWidth="942.0" style="-fx-background-color: white;" />
                </content>
             </ScrollPane>
             <Label fx:id="headingLabel" layoutX="39.0" layoutY="96.0" prefHeight="38.0" prefWidth="419.0">
