--- a/src/main/resources/fxmls/fan/UnfinishedFanMeetsCard.fxml
+++ b/src/main/resources/fxmls/fan/UnfinishedFanMeetsCard.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<HBox prefHeight="185.0" prefWidth="943.0" style="-fx-border-color: #1b4994; -fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.cards.UnfinishedFanMeetCardView">
+<HBox prefHeight="185.0" prefWidth="943.0" style="-fx-border-color: #1b4994; -fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.cards.UnfinishedFanMeetCardView">
    <children>
       <VBox prefHeight="184.0" prefWidth="133.0">
          <children>
@@ -105,9 +108,17 @@
                   <Insets right="18.0" top="5.0" />
                </VBox.margin>
             </Text>
+            <Label fx:id="priceLabel" prefHeight="32.0" prefWidth="194.0" text="Price ">
+               <VBox.margin>
+                  <Insets right="18.0" top="45.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="System Italic" size="22.0" />
+               </font>
+            </Label>
             <Button fx:id="cancelBT" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="42.0" prefWidth="195.0" style="-fx-background-color: #1b4994;" text="Cancel" textFill="WHITE">
                <VBox.margin>
-                  <Insets right="18.0" top="87.0" />
+                  <Insets right="18.0" top="20.0" />
                </VBox.margin>
                <font>
                   <Font size="22.0" />
